# cw-comments-publish

./: .gitignore  README.md  azure-pipelines.yml  config.example.yaml
01-azure-devops/: E2E_CHECKLIST.md  README.md  dab_runner.py  databricks.yml  pyproject.toml
01-azure-devops/comments/finance/: gl_entries.yaml
01-azure-devops/comments/sales/: customers.yaml  orders.yaml
01-azure-devops/comments_sync/: __init__.py  cli.py
02-databricks-app/: README.md  app.py  app.yaml  databricks.yml  requirements.txt
02-databricks-app/comments_core/: _sql.py  apply.py  diff.py  extract.py  models.py  yaml_io.py
03-teams-approval/: README.md  databricks.yml  detector_job.py  requirements.txt  teams_cards.py
03-teams-approval/tests/: test_tokens.py
03-teams-approval/webhook_receiver/: app.py  app.yaml  requirements.txt
04-notebook-confirm/: README.md  promote_comments.py
examples/: README.md  seed_catalogs.sql  seed_runner.py
shared/: README.md  pyproject.toml
shared/comments_core/: __init__.py  config.py
shared/tests/: test_apply.py  test_diff.py  test_extract.py  test_sql.py  test_yaml_io.py
