[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comments-core"
version = "0.1.0"
description = "Shared primitives for extracting, diffing, and applying Unity Catalog table/column comments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.30.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["comments_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
